--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>Blog <%= titulo %></title>
 </head>
 <body>
     <nav>
@@ -18,9 +18,17 @@
             <li><a href="/blog/criar">Novo Blog</a></li>
         </ul>
     </nav>
-    <div class="conteudo-blog">
+      <div class="conteudo-blog">
         <h2>Todo Blog</h2>
-
+        <% if (blogs.length > 0) { %>
+        <% blogs.forEach(blog => { %>
+           
+            <h3 class="titulo"><%= blog.titulo %></h3>
+            <p class="conteudo"><%= blog.conteudo %></p>
+ 
+        <% }) %>
+        <% } %>
     </div>
+
 </body>
 </html>
