--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,23 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog <%= titulo %></title>
-</head>
+ <%- include('./parciais/head.ejs') %>
 <body>
-    <nav>
-        <div class="title-site">
-            <a href="/"><h1>Blog</h1></a>
-            <p>Site</p>
-
-        </div>
-        <ul>
-            <li><a href="/">Blog</a></li>
-            <li><a href="sobre">Sobre</a></li>
-            <li><a href="/blog/criar">Novo Blog</a></li>
-        </ul>
-    </nav>
+    <!-- Inclusão de parcial NAV -->
+<%- include('./parciais/nav.ejs') %>
       <div class="conteudo-blog">
         <h2>Todo Blog</h2>
         <% if (blogs.length > 0) { %>
@@ -27,8 +13,10 @@
             <p class="conteudo"><%= blog.conteudo %></p>
  
         <% }) %>
+        <% } else { %>
+            <p>A lista do blog está vazia </p>
         <% } %>
     </div>
-
+<%- include('./parciais/footer.ejs') %>
 </body>
 </html>
