--- a/views/sobre.ejs
+++ b/views/sobre.ejs
@@ -1,25 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog <%=titulo%></title>
-</head>
+ <%- include('./parciais/nav.ejs') %>
 <body>
-    <nav>
-        <div class="title-site">
-            <a href="/"><h1>Blog</h1></a>
-            <p>Site</p>
-
-        </div>
-        <ul>
-            <li><a href="/">Blog</a></li>
-            <li><a href="sobre">Sobre</a></li>
-            <li><a href="/blog/criar">Novo Blog</a></li>
-        </ul>
-    </nav>
+   
     <div class="conteudo-blog">
         <h2>Tela Sobre a Empresa</h2>
     </div>
+    <%- include('./parciais/footer.ejs') %>
 </body>
 </html>
