conexao com banco

--- a/views/criar.ejs
+++ b/views/criar.ejs
@@ -7,11 +7,11 @@
     <div class="criar-conteudo-blog">
             <form action="">
                 <label for="titulo">Titulo do Blog</label>
-                <input type="text" id="titulo" required>
+                <input type="text" id="titulo" name="titulo" required>
                 <label for="texto-curto">Texto curto do Blog</label>
-                 <input type="text" id="titulo" required>
+                 <input type="text" id="textocurtodoblog "name="textocurtodoblog" required>
                  <label for="conteudo">Conteúdo do Blog:</label>
-                 <textarea  id="conteudo" required></textarea>
+                 <textarea  id="conteudo" name="conteudo" required></textarea>
                  <button>Enviar</button>
             </form>
         </div>
